Fix the footer on small screen.
The size of the footer was the same on a big and small screen. Add a
rule to reduce the size of the footer similar to the other elements.

Closes #1.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,7 +46,7 @@ ul.spaced li {
 }
 
 #footer p {
-  width: 800px;
+  width: 720px;
   margin: 0 auto;
   margin-top: 2em;
   text-align: center;
@@ -121,5 +121,11 @@ code {
     width: 90%;
     margin-left: 0.2em;
     text-align: justify;
+  }
+  div#footer {
+    width: 90%;
+  }
+  #footer p {
+    width: 90%;
   }
 }
